feat: update tests to work with spring security